<resources>
    <string name="app_name">Solidarios</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Conectarse</string>
    <string name="action_sign_in_short">Conectarse</string>
    <string name="error_invalid_email">Dirección inválida</string>
    <string name="error_invalid_password">Contraseña demasiado corta</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_field_required">Este campo no puede estar vacío</string>
    <string name="call_dialog_message">Para hacer esto, hay que llamar por teléfono, ¿quieres llamar ahora?</string>
    <string name="positive_call">Sí, quiero llamar</string>
    <string name="negative_call">No, llamaré más tarde</string>
    <string name="phoneNumber">606709629</string>
    <string name="baseURL">http://api.solidarios.coredumped.es</string>
    <string name="help_at_home">Ayuda en casa</string>
    <string name="help_in_the_street">Ayuda en el exterior</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="other_help_cases">Otro tipo de ayuda</string>
    <string name="cerrar_aplicacion">Ya puedes cerrar la aplicación, ¡la oficina te llamará en un ratito!</string>
    <string name="close_app_button">Cerrar aplicación</string>
    <string name="create_new_account_text">No tengo cuenta, pero quiero hacerme una.</string>
    <string name="move_things">Mover cosas</string>
    <string name="clean">Limpiar</string>
    <string name="keepCompany">Compañía</string>
    <string name="sendHelpRequest">Enviar petición</string>
    <string name="when_question">¿Cuándo necesitas ayuda? Si es ahora mismo, pulsa el botón de la derecha</string>
    <string name="right_now">Ahora mismo</string>
    <string name="go_shopping">Ir a comprar</string>
    <string name="walk">Pasear</string>
    <string name="go_doctor">Ir al médico</string>
    <string name="go_event">Ir a un evento de Solidarios</string>
    <string name="get_signed_user_list">Ver voluntarios inscritos para ayudarme</string>
    <string name="choose_button_text">Escoger</string>
    <string name="loading_list_items">Loading list items</string>
    <string name="no_users_signed">No hay voluntarios inscritos a tu petición</string>
    <string name="update_profile">Actualizar perfil</string>
    <string name="look_for_needer">Ayudar a alguien</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="repeat_new_password">Repite nueva contraseña</string>
    <string name="save_changes">Guardar cambios</string>
    <string name="login_fail">El correo o la contraseña no son válidos</string>
    <string name="no_calling_permission">No se han concedido permisos de llamadas.</string>
    <string name="call_get_account">Recuerda que debes llamar para obtener tu cuenta</string>
    <string name="error_json_response">Error on connection</string>
    <string name="error_connection">Error on connection</string>
    <string name="request_accepted">¡Tu petición se ha enviado!</string>
    <string name="fail_events_server">Fail to obtain events from server.</string>
    <string name="login_not_valid">Usuario no válido.</string>
    <string name="email">e-mail</string>

    <!-- Strings related to profile -->
    <string name="data_email">Email</string>
    <string name="data_name">Nombre</string>
    <string name="data_surname">Primer Apellido</string>
    <string name="data_age">Edad</string>
    <string name="data_gender">Género</string>
    <string name="data_description">Descripción</string>
    <string name="data_phone_number">Número de Teléfono</string>
    <string name="data_address">Dirección</string>
    <string name="data_dni">DNI</string>

</resources>
