<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VolunteerFragments.StreetOptionsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:orientation="vertical"
        android:weightSum="4">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/goShopping"
            android:text="@string/go_shopping"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/walk"
            android:text="@string/walk"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/goDoctor"
            android:text="@string/go_doctor"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/goEvent"
            android:text="@string/go_event"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/whenQuestion"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:lines="2"
                android:text="@string/when_question"/>

            <Button
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/rightNowButton"
                android:layout_weight="1"
                android:text="@string/right_now"/>
        </LinearLayout>

        <DatePicker
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:id="@+id/datePicker"></DatePicker>
        <TimePicker
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:id="@+id/timePicker"></TimePicker>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/requestOK"
            android:layout_weight="1"
            android:text="@string/sendHelpRequest"/>
    </LinearLayout>




</FrameLayout>