<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VolunteerFragments.HomeOptionsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:orientation="vertical"
        android:weightSum="3">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/moveThings"
            android:text="@string/move_things"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/clean"
            android:text="@string/clean"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/keepCompany"
            android:text="@string/keepCompany"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/whenQuestion"
            android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:lines="2"
            android:text="@string/when_question"/>

            <Button
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/rightNowButton"
                android:layout_weight="1"
                android:text="@string/right_now"/>
        </LinearLayout>

        <DatePicker
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:id="@+id/datePicker"></DatePicker>
        <TimePicker
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:id="@+id/timePicker"></TimePicker>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/requestOK"
            android:layout_weight="1"
            android:text="@string/sendHelpRequest"/>
    </LinearLayout>

</FrameLayout>